styles/custom.css
/*
Octopus Think invoice template
Created by sarah semark
January 2020
*/
@font-face {
  font-family: 'Inter';
  font-style:  normal;
  font-weight: 400;
  font-display: swap;
  src: url("https://rsms.me/inter/font-files/Inter-Regular.woff2?v=3.11") format("woff2"),
       url("https://rsms.me/inter/font-files/Inter-Regular.woff?v=3.11") format("woff");
}

@font-face {
  font-family: 'Inter';
  font-style:  normal;
  font-weight: 600;
  font-display: swap;
  src: url("https://rsms.me/inter/font-files/Inter-SemiBold.woff2?v=3.11") format("woff2"),
       url("https://rsms.me/inter/font-files/Inter-SemiBold.woff?v=3.11") format("woff");
}

/* CSS variables */
:root{
  --white: #ffffff;
  --grey0: #f8f9fa;
  --grey100: #ebedf0;
  --grey200: #dee0e5;
  --grey300: #cfd3da;
  --grey400: #bec4cd;
  --grey500: #acb3bf;
  --grey600: #97a0af;
  --grey700: #818996;
  --grey800: #666c76;
  --grey900: #3b3f45;
  --black: #181b1c;

  --pink300: #f19dca;
  --pink500: #e33592;
  --pink700: #b32973;

  --cyan300: #76d0d6;
  --cyan500: #00a8b4;
  --cyan700: #00858e;
}

* {
  box-sizing: border-box;
}

/* Globals
----------------------------------------------- */

#invoice {
  background: var(--white);
  color: var(--grey900);
  font-size: 10pt;
  line-height: 1.4;
  padding: 1cm;
  width: 764px;
  font-family: 'Inter', "Helvetica Neue", Arial, Helvetica, sans-serif;
}

h2 {
  font-weight: 600;
  font-size: 14pt;
  line-height: 1.2;
  margin: 0 0 4pt 0;
}

/* Header
----------------------------------------------- */

/* Company details */
#invoice-header {
  border-bottom: 2px solid var(--black);
  padding-bottom: 8pt;
  margin-bottom: 0.5cm;
}

#invoice-header::after {
  width: 100%;
  clear: both;
  display: block;
  content: '';
}

#invoice-blank-header {
  margin-top: 1.6cm;
}

#invoice-header .logo {
  max-width: 320px;
}

/* Contact details */
#company-address {
  float: right;
}

.vcard strong {
  font-weight: 600;
}

.vcard > div {
  padding-bottom: 4pt;
}

.vcard .adr > div {
  display: inline;
}

#invoice-other {
  display: none;
  text-align: right;
  
} 

/* Invoice details */
#invoice-info {
  width: 50%;
  float: left;
}

#invoice-info h3 {
  font-size: inherit;
  font-weight: inherit;
  margin: 0;
}

#invoice-info h3::before {
  content: 'Issued ';
  display: inline;
}

#invoice-info strong::before {
  content: '#';
  display: inline;
}

#payment-terms {
  display: none;
}

#payment-total {
  display: none;
}

/* Client details */
#client-details {
  width: 50%;
  float: right;
}

/* Tables
----------------------------------------------- */

#invoice table#invoice-amount { 
  clear: both;
  display: block;
  padding: 1cm 0;
  border-collapse:collapse; 
  width: 100%;
}

#invoice-amount .item_group_title td {
  padding-top: 0.75em;
}

/* Headings */
#invoice-amount th {
  text-align: left;
  white-space: nowrap;
  padding: 4pt 0;
  text-transform: uppercase;
  font-size: 9pt;
  font-weight: 600;
  letter-spacing: 0.25pt;
  border-bottom: 1px solid var(--grey800);
}

/* Rows */
#invoice-amount tr {
  border-bottom: 1px solid var(--grey400);
}

#invoice-amount tbody {
  border-bottom: 1px solid var(--grey800);
}

/* Cells */
#invoice-amount td {
  border: none;
  margin: 0;
  padding: 8pt 0;
  vertical-align: top;
}

#invoice-amount td.item_r {
  text-align: right;
}

#invoice-amount td.item_l {
  text-align: left;
  white-space: normal;
}

/* Footer rows */
#invoice-amount tfoot tr,
#invoice-amount tfoot td {
  border: none;
}

#invoice-amount tfoot td {
  
}

/* Total */
#invoice-amount #total_tr {
  border-top:  2px solid var(--black);
}

#invoice-amount td.total {
  text-align: right;
  font-size: 14pt;
  font-weight: 600;
}

#invoice-amount .quantity_th{
  width: 15%;
}

#invoice-amount .details_th{
  width: 50%;
}
#invoice-amount .details_notax_th {
  width: 60%;
}

#invoice-amount .salestax_th {
  width: 10%; 
  text-align: center;
}

#invoice-amount .subtotal_th {
  width: 15%; 
  text-align: right;
}

#invoice-amount .unitprice_th {
  width: 10%; 
  text-align: right;
}



/* Invoice UK VAT Summary Table */
#invoice #invoice-uk-vat-summary{width:100%;border-collapse:collapse;margin:25px 0 0 0;clear:both;border:0; background:#fff; }
#invoice tr#invoice-uk-vat-header th{padding:7px 0;border-top: 1px solid #ccc;}
#invoice-uk-vat-summary td, #invoice #invoice-uk-vat-summary th{text-align:left; font-size:9pt;padding:2px 0;}
#vat-total td, #vat-total th{border-top:1px solid #ccc;}

/* Footer
----------------------------------------------- */

#invoice #payment-details {
  float: left;
  width: 50%;
}

#comments {
  float: left;
  padding-top: 20pt;
  width: 50%;
}

